--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 44px;
+            color : white;
+            background-color: black;
+            background-image: url('https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHllejdwdGx4OWF5bWtqOWZ6eXQ4eHU5NWp1eHBlYTh4YXAyNjJyZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Phzg1XZgJTeZG/giphy.gif')       
         }
         button {
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
-            color: moccasin;
+            color: white;
+            background-color:  moccasin;
         }
-    </style>
+    </style> 
 </head>
 <body>
     <h1>Ты даун</h1>
