--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
-            color: var(-tg-theme-button-color);
-            background-color:  var(-tg-theme-button-text-color);
+            color: white;
+            background-color:  black;
         }
         button:hover {
-            background-color: var(-tg-theme-secondary-bg-color);
+            color: black;
+            background-color: white;
         }
     </style> 
 </head>
