--- a/index.html
+++ b/index.html
@@ -6,27 +6,76 @@
     <title>Мини-приложение</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
+        /* Общие стили */
         body {
-            font-family: Arial, sans-serif;
-            font-weight: 200;
+            font-family: 'Roboto', Arial, sans-serif;
+            font-weight: 300;
             text-align: center;
             color: var(--tg-theme-text-color);
-            background-color: var(--tg-theme-bg-color);   
+            background-color: var(--tg-theme-bg-color);
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
-        button {
-            padding: 10px 20px;
+
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        p {
             font-size: 16px;
+            margin-bottom: 20px;
+        }
+
+        /* Кнопки */
+        button {
+            padding: 12px 24px;
+            font-size: 16px;
+            font-weight: 500;
             cursor: pointer;
             color: var(--tg-theme-button-text-color);
             background-color: var(--tg-theme-button-color);
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             margin: 10px;
+            transition: all 0.3s ease;
         }
+
         button:hover {
-            color: var(--tg-theme-hint-color);
             background-color: var(--tg-theme-secondary-bg-color);
+            color: var(--tg-theme-hint-color);
         }
+
+        /* Поле ввода */
+        input {
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid var(--tg-theme-hint-color);
+            border-radius: 8px;
+            width: 80%;
+            max-width: 300px;
+            margin-bottom: 20px;
+            outline: none;
+            transition: border-color 0.3s ease;
+        }
+
+        input:focus {
+            border-color: var(--tg-theme-button-color);
+        }
+
+        /* Контейнеры */
+        #menu-container, #game-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
         #game-container {
             display: none;
         }
