--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             font-weight: 900;
             text-align: center;
             color: var(--tg-theme-text-color);
-            background-color: var(--tg-theme-bg-color);
+            background: url('img/bg.png') no-repeat center center fixed; /* Устанавливаем фон */
+            background-size: cover; /* Масштабируем изображение, чтобы оно покрывало весь экран */
             margin: 0;
             padding: 0;
             display: flex;
