--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
         #exit-button {
             margin-top: 30px; /* Увеличенный отступ сверху */
         }
+        #title {
+            color: var(--tg-theme-text-color);
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
