--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
             padding: 0;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start; /* Выравнивание контента сверху */
             align-items: center;
             height: 100vh;
+            padding-top: 20px; /* Отступ сверху */
         }
 
         h1 {
@@ -88,7 +89,7 @@
         #title {
             color: var(--tg-theme-text-color);
             font-size: 24px;
-            margin-bottom: 50px;
+            margin-bottom: 20px; /* Уменьшенный отступ снизу */
         }
     </style>
 </head>
