--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
         }
 
         #exit-button {
-            margin-top: 30px; /* Увеличенный отступ сверху */
+            margin-top: 50px;
+            background-color: crimson;
+            color: white; /* Увеличенный отступ сверху */
         }
         #title {
             color: var(--tg-theme-text-color);
