--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 
         /* Кнопки */
         button {
+            font-family: 'Arial Black', Arial, sans-serif;
+            font-weight: 900; 
             padding: 12px 24px;
             font-size: 16px;
-            font-weight: 500;
             cursor: pointer;
             color: var(--tg-theme-button-text-color);
             background-color: var(--tg-theme-button-color);
@@ -91,7 +92,7 @@
         #title {
             color: var(--tg-theme-text-color);
             font-size: 24px;
-            margin-bottom: 75px; /* Уменьшенный отступ снизу */
+            margin-bottom: 200px; /* Уменьшенный отступ снизу */
         }
     </style>
 </head>
