--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             font-size: 16px;
             cursor: pointer;
             color: var(--tg-theme-button-text-color);
-            background-color: var(--tg-theme-button-color);
+            background-color: rgb(147, 243, 147);
             border: none;
             border-radius: 8px;
             margin: 10px;
