--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         button:hover {
             background-color: var(--tg-theme-button-text-color);
             color: rgb(147, 243, 147);
-            filter: invert(1) grayscale(0.2) contrast(1.2);
+            filter: invert(1) contrast(1.2);
         }
 
         /* Поле ввода */
@@ -86,9 +86,9 @@
         }
 
         #exit-button {
+            margin-top: 50px;
             background-color: crimson;
             color: white;
-            margin-top: 50px;
         }
         #exit-button:hover {
             background-color: white;
