--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             padding: 12px 24px;
             font-size: 16px;
             cursor: pointer;
-            color: var(--tg-theme-button-text-color);
+            color: white;
             background-color: rgb(147, 243, 147);
             border: none;
             border-radius: 8px;
@@ -50,9 +50,8 @@
         }
 
         button:hover {
-            background-color: var(--tg-theme-button-text-color);
-            color: rgb(147, 243, 147);
-            filter: invert(1) contrast(1.2);
+            background-color: rgb(240, 147, 243);
+            color: rgb(0, 0, 0);
         }
 
         /* Поле ввода */
@@ -91,8 +90,8 @@
             color: white;
         }
         #exit-button:hover {
-            background-color: white;
-            color: crimson;
+            background-color: rgb(20, 220, 170);
+            color: rgb(0, 0, 0);
             filter: none;
         }
 
@@ -107,8 +106,8 @@
             color: black;
         }
         #knb:hover {
-            background-color: black;
-            color: rgb(168, 168, 168);
+            background-color: rgb(100, 100, 100);
+            color: rgb(255, 255, 255);
             filter: none;
         }
     </style>
