--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
             background-color: rgb(231, 136, 255);
             color: rgb(0, 0, 0);
         }
+        #game-input {
+            display: none;
+            color: black;
+            background-color: rgb(255, 255, 255);
+        }
+
     </style>
 </head>
 <body>
