--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         button:hover {
             background-color: rgb(243, 147, 147);
             color: rgb(0, 0, 0);
+            transform: scale(1.1); /* Увеличение кнопки при наведении */
         }
 
         /* Поле ввода */
@@ -87,7 +88,7 @@
         #exit-button {
             margin-top: 50px;
             background-color: crimson;
-            color: white;
+            color: white;  
         }
         #exit-button:hover {
             background-color: rgb(20, 220, 170);
