--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
             color: rgb(0, 0, 0);
         }
 
+        /* Добавьте в <style> */
+        @keyframes grow {
+            0% { transform: scale(1); }
+            30% { transform: scale(1.3); }
+            100% { transform: scale(1); }
+        }
+
+        #game-message.animated {
+            animation: grow 0.5s;
+        }
     </style>
 </head>
 <body>
@@ -156,25 +166,25 @@
             document.getElementById("title").innerText = "Угадай число";
             document.getElementById("menu-container").style.display = "none";
             document.getElementById("game-container").style.display = "block";
-            document.getElementById("game-message").innerText = "Я загадал число от 1 до 100. Попробуй угадать!";
+            showMessageWithAnimation("Я загадал число от 1 до 100. Попробуй угадать!");
         }
 
         function submitGuess() {
             const guess = parseInt(document.getElementById("game-input").value);
             if (isNaN(guess)) {
-                document.getElementById("game-message").innerText = "Введите корректное число!";
+                showMessageWithAnimation("Введите корректное число!");
                 return;
             }
             if (guess < 1) {
-                document.getElementById("game-message").innerText = "Я загадал число от 1!";
+                showMessageWithAnimation("Я загадал число от 1!");
             } else if (guess > 100) {
-                document.getElementById("game-message").innerText = "Я загадал число до 100!";
+                showMessageWithAnimation("Я загадал число до 100!");
             } else if (guess > secretNumber) {
-                document.getElementById("game-message").innerText = "Мое число меньше!";
+                showMessageWithAnimation("Мое число меньше!");
             } else if (guess < secretNumber) {
-                document.getElementById("game-message").innerText = "Мое число больше!";
+                showMessageWithAnimation("Мое число больше!");
             } else {
-                document.getElementById("game-message").innerText = "🎉 Правильно! Ты угадал!";
+                showMessageWithAnimation("🎉 Правильно! Ты угадал!");
             }
         }
 
@@ -188,7 +198,7 @@
             document.getElementById("title").innerText = "Камень, ножницы, бумага";
             document.getElementById("menu-container").style.display = "none";
             document.getElementById("game-container").style.display = "block";
-            document.getElementById("game-message").innerText = "Эта игра пока не реализована.";
+            showMessageWithAnimation("Эта игра пока не реализована.");
         }
 
         function backToMenu() {
@@ -199,6 +209,14 @@
 
         function exitApp() {
             tg.close(); // Закрывает мини-приложение
+        }
+
+        function showMessageWithAnimation(text) {
+            const msg = document.getElementById("game-message");
+            msg.innerText = text;
+            msg.classList.remove("animated"); // Сброс, если анимация уже была
+            void msg.offsetWidth; // Трюк для перезапуска анимации
+            msg.classList.add("animated");
         }
     </script>
 </body>
