--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
         #game-container {
             display: none;
+            min-height: 120px; /* подберите под ваш дизайн */
         }
 
         #exit-button {
@@ -133,12 +134,18 @@
         /* Добавьте в <style> */
         @keyframes grow {
             0% { transform: scale(1); }
-            30% { transform: scale(1.3); }
+            30% { transform: scale(1.1); }
             100% { transform: scale(1); }
         }
 
         #game-message.animated {
             animation: grow 0.5s;
+        }
+
+        #game-message {
+            display: inline-block;
+            min-width: 200px;
+            text-align: center;
         }
     </style>
 </head>
