--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
             min-height: 120px; /* подберите под ваш дизайн */
         }
 
+        #knb-buttons {
+            display: none;
+            flex-direction: row;
+            gap: 10px;
+        }
+
         #exit-button {
             margin-top: 50px;
             background-color: crimson;
@@ -160,9 +166,15 @@
     <div id="game-container">
         <p id="game-message"></p>
         <input id="game-input" type="text" placeholder="Введите число" />
-        <button onclick="submitGuess()">Подтвердить</button>
+        <div id="knb-buttons">
+            <button onclick="playKnb('Камень')">Камень</button>
+            <button onclick="playKnb('Ножницы')">Ножницы</button>
+            <button onclick="playKnb('Бумага')">Бумага</button>
+        </div>
         <button id="exit-button" onclick="backToMenu()">Назад</button>
     </div>
+
+    
 
     <script>
         const tg = window.Telegram.WebApp;
@@ -173,6 +185,8 @@
             document.getElementById("title").innerText = "Угадай число";
             document.getElementById("menu-container").style.display = "none";
             document.getElementById("game-container").style.display = "block";
+            document.getElementById("knb-buttons").style.display = "none";
+            document.getElementById("game-input").style.display = "inline-block";
             showMessageWithAnimation("Я загадал число от 1 до 100. Попробуй угадать!");
         }
 
@@ -205,7 +219,27 @@
             document.getElementById("title").innerText = "Камень, ножницы, бумага";
             document.getElementById("menu-container").style.display = "none";
             document.getElementById("game-container").style.display = "block";
-            showMessageWithAnimation("Эта игра пока не реализована.");
+            document.getElementById("knb-buttons").style.display = "flex";
+            document.getElementById("game-input").style.display = "none";
+            showMessageWithAnimation("Выберите ваш вариант:");
+        }
+
+        function playKnb(userChoice) {
+            const choices = ["Камень", "Ножницы", "Бумага"];
+            const botChoice = choices[Math.floor(Math.random() * 3)];
+            let result = "";
+            if (userChoice === botChoice) {
+                result = "Ничья! Я тоже выбрал " + botChoice + ".";
+            } else if (
+                (userChoice === "Камень" && botChoice === "Ножницы") ||
+                (userChoice === "Ножницы" && botChoice === "Бумага") ||
+                (userChoice === "Бумага" && botChoice === "Камень")
+            ) {
+                result = "Ты выиграл! Я выбрал " + botChoice + ".";
+            } else {
+                result = "Я выиграл! Я выбрал " + botChoice + ".";
+            }
+            showMessageWithAnimation(result);
         }
 
         function backToMenu() {
@@ -228,3 +262,4 @@
     </script>
 </body>
 </html>
+``` 
