--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
             min-height: 120px; /* подберите под ваш дизайн */
         }
 
-        #knb-buttons {
+        #knb-buttons {            
             display: none;
             flex-direction: row;
-            gap: 10px;
+            gap: 5px;
         }
 
         #exit-button {
@@ -165,6 +165,7 @@
 
     <div id="game-container">
         <p id="game-message"></p>
+        <p id="score">Счет: Игрок 0 - 0 Бот</p>
         <input id="game-input" type="text" placeholder="Введите число" />
         <div id="knb-buttons">
             <button onclick="playKnb('Камень')">Камень</button>
@@ -179,6 +180,8 @@
     <script>
         const tg = window.Telegram.WebApp;
         let secretNumber;
+        let playerScore = 0;
+        let botScore = 0;
 
         function startGuessNumber() {
             secretNumber = Math.floor(Math.random() * 100) + 1;
@@ -228,6 +231,7 @@
             const choices = ["Камень", "Ножницы", "Бумага"];
             const botChoice = choices[Math.floor(Math.random() * 3)];
             let result = "";
+
             if (userChoice === botChoice) {
                 result = "Ничья! Я тоже выбрал " + botChoice + ".";
             } else if (
@@ -236,10 +240,20 @@
                 (userChoice === "Бумага" && botChoice === "Камень")
             ) {
                 result = "Ты выиграл! Я выбрал " + botChoice + ".";
+                playerScore++; // Увеличиваем счет игрока
             } else {
                 result = "Я выиграл! Я выбрал " + botChoice + ".";
+                botScore++; // Увеличиваем счет бота
             }
+
+            // Обновляем сообщение и счет
             showMessageWithAnimation(result);
+            updateScore();
+        }
+
+        function updateScore() {
+            const scoreElement = document.getElementById("score");
+            scoreElement.innerText = `Счет: Игрок ${playerScore} - ${botScore} Бот`;
         }
 
         function backToMenu() {
@@ -262,4 +276,3 @@
     </script>
 </body>
 </html>
-``` 
