--- a/index.html
+++ b/index.html
@@ -101,9 +101,16 @@
             gap: 10px; /* Расстояние между кнопками */
         }
 
-        #game-container {
+        #game-container-knb {
             display: none;
             min-height: 120px; /* подберите под ваш дизайн */
+        }
+        #game-container-number {
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 10px; /* Расстояние между кнопками */      
         }
 
         #knb-buttons {            
@@ -163,10 +170,9 @@
         <button id="exit-button" onclick="exitApp()">Выход</button>
     </div>
 
-    <div id="game-container">
+    <div id="game-container-knb">
         <p id="game-message"></p>
         <p id="score">Счет: Игрок 0 - 0 Бот</p>
-        <input id="game-input" type="text" placeholder="Введите число" />
         <div id="knb-buttons">
             <button onclick="playKnb('Камень')">Камень</button>
             <button onclick="playKnb('Ножницы')">Ножницы</button>
@@ -174,6 +180,9 @@
         </div>
         <button id="exit-button" onclick="backToMenu()">Назад</button>
     </div>
+    <div id="game-container-number">
+        <input type="text" id="game-input" placeholder="Введите число от 1 до 100" />
+        <button onclick="submitGuess()">Угадать</button>
 
     
 
